feat: primeiras estilizacoes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Gitflow - estudo</title>
+    <title>GitFlow - estudo</title>
 </head>
 <body>
-    
-
+    <h1>GitFlow estudos</h1>
+    <h4>B7-Web</h4>
     <script src="script.js"></script>
 </body>
 </html>
